# yogamat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  asanas_dristi.csv  build_for_web.sh  old_yogamatdb.sql  out_db  schema.txt
src/: camera.rs  database.rs  lib.rs  main.rs  picking.rs  skeleton.rs  vector_ops.rs
webapp/: .gitignore  index.html
